// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposits list renders correctly a single deposit 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <h2
      class="screen-reader-text"
    >
      Filters
    </h2>
    <div
      class="woocommerce-filters"
    >
      <div
        class="woocommerce-filters__basic-filters"
      >
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Show
            :
          </span>
          <div
            class="components-dropdown"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All deposits
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Deposit history
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                class="gridicon gridicons-cloud-download"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M18 9c-.009 0-.017.002-.025.003A6.496 6.496 0 005 9.5a6.5 6.5 0 00.186 1.519C5.123 11.016 5.064 11 5 11a4 4 0 00-4 4c0 1.202.541 2.267 1.38 3h18.593C22.196 17.089 23 15.643 23 14a5 5 0 00-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                  />
                </g>
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Download
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Deposit history
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header info-button is-sorted is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    />
                  </th>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-1"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-1"
                    >
                      Sort by Date in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    aria-sort="none"
                    class="woocommerce-table__header is-sortable is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-3"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Amount
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Amount
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-3"
                    >
                      Sort by Amount in descending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Status
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank account
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank account
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    >
                      Jan 2, 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      Deposit
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      $20.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Paid
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    >
                      Jan 3, 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      $30.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-warning"
                      >
                        Pending
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                1
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                deposit
              </span>
            </li>
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                $50.00
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                total
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposits list renders correctly with multiple currencies 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <h2
      class="screen-reader-text"
    >
      Filters
    </h2>
    <div
      class="woocommerce-filters"
    >
      <div
        class="woocommerce-filters__basic-filters"
      >
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Deposit currency
            :
          </span>
          <div
            class="components-dropdown"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Show
            :
          </span>
          <div
            class="components-dropdown"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All deposits
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Deposit history
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                class="gridicon gridicons-cloud-download"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M18 9c-.009 0-.017.002-.025.003A6.496 6.496 0 005 9.5a6.5 6.5 0 00.186 1.519C5.123 11.016 5.064 11 5 11a4 4 0 00-4 4c0 1.202.541 2.267 1.38 3h18.593C22.196 17.089 23 15.643 23 14a5 5 0 00-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                  />
                </g>
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Download
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Deposit history
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header info-button is-sorted is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    />
                  </th>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-1"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-1"
                    >
                      Sort by Date in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    aria-sort="none"
                    class="woocommerce-table__header is-sortable is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-3"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Amount
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Amount
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-3"
                    >
                      Sort by Amount in descending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Status
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank account
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank account
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    >
                      Jan 2, 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      Deposit
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      $20.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Paid
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    >
                      Jan 3, 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      $30.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-warning"
                      >
                        Pending
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                2
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                deposits
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
